fix maven issues